freest/test/prog/Valid/Functional/BlockCommentInSig/BlockCommentInSig.fst
module BlockCommentInSig where 

f : ()
f {- comment -} = ()

main : ()
main {- comment -} = print ()
